--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  firebase_database: ^10.0.6
 
 dev_dependencies:
   flutter_test:
